--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section id="bicycle" class="wrapper">
 
 
-        <a href="index2.html"><h4 class="oder_start">注文する</h4></a>
+        <a href="index_2nd.html"><h4 class="oder_start">注文する</h4></a>
       </section>
     </main>
 
